data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_579.wast
;; 10. **Test Description**: Create a function that calls another function within a `try-catch` block, where the called function contains `nop` instructions. Ensure proper exception propagation and verify the final returned value.    - **Constraint Checked**: Validates exception handling with function calls.    - **Relation to Improper Handling**: `Nop` mishandling may interfere with proper exception handling and returns.

(assert_invalid
  (module
    (func $callee (nop) (throw 0))
    (func $caller (try (do (call $callee)) (catch 0 (nop)) (result i32)) (i32.const 1))
  )
  "type mismatch"
)